--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "expo-media-library": "~15.2.3",
     "expo-image-picker": "~14.1.1",
     "expo-face-detector": "~12.1.1",
-    "expo-barcode-scanner": "~12.3.2"
+    "expo-barcode-scanner": "~12.3.2",
+    "expo-localization": "~14.1.1",
+    "react-native-maps": "1.3.2",
+    "expo-location": "~15.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
